Klara wants the issue covers to scale less on the homepage

--- a/base.css
+++ b/base.css
@@ -20,5 +20,5 @@
 
 .issue_cover:hover {
     border: 1px solid black;
-    height: 300px;
+    height: 270px;
 }
